k8s/httpd_ingress/httpd-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpd-ingress
  labels:
    environment: dev
