k8s/httpd_ingress/httpd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpd-svc
  name: httpd-svc
  namespace: httpd-ingress
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: httpd
  type: ClusterIP
status:
  loadBalancer: {}
